<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pssst</string>
    <string name="action_settings">Settings</string>
    <string name="action_write">Write Message</string>
    <string name="action_delete_user">Delete User</string>
    <string name="action_logout">Logout</string>
    <string name="button_create">CREATE</string>
    <string name="button_login">LOGIN</string>
    <string name="button_send">SEND</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_receiver">Usernames</string>
    <string name="hint_message">…</string>
    <string name="alert_delete_user">Delete this user?</string>
    <string name="alert_logout">Do you want to log out?</string>
    <string name="pref_app_title">APP SETTINGS</string>
    <string name="pref_app_default_box">Default box</string>
    <string name="pref_app_pull_interval_active">Interval active</string>
    <string name="pref_app_pull_interval_paused">Interval inactive</string>
    <string name="pref_api_title">API SETTINGS</string>
    <string name="pref_api_server_address">Pssst server</string>
    <string name="password_warning">Please remember your password, because we won\'t.</string>
</resources>
