<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="name.pssst.app.activity.Pull">

    <item android:id="@+id/action_write"
          android:icon="@drawable/ic_action_write"
          android:title="@string/action_write"
          android:orderInCategory="100"
          android:showAsAction="ifRoom"/>

    <item android:id="@+id/action_delete_user"
          android:icon="@drawable/ic_action_trash"
          android:title="@string/action_delete_user"
          android:orderInCategory="100"
          android:showAsAction="never"/>

    <item android:id="@+id/action_logout"
          android:icon="@drawable/ic_action_logout"
          android:title="@string/action_logout"
          android:orderInCategory="100"
          android:showAsAction="never"/>

</menu>
