<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="name.pssst.app.ListActivity">

    <item android:id="@+id/action_write"
          android:icon="@drawable/ic_action_edit"
          android:title="@string/action_write"
          android:orderInCategory="100"
          app:showAsAction="ifRoom"/>

    <!--<item android:id="@+id/action_create_box"-->
          <!--android:title="@string/action_create_box"-->
          <!--android:orderInCategory="100"-->
          <!--app:showAsAction="never"/>-->

    <!--<item android:id="@+id/action_delete_box"-->
          <!--android:title="@string/action_delete_box"-->
          <!--android:orderInCategory="100"-->
          <!--app:showAsAction="never"/>-->

    <item android:id="@+id/action_delete_user"
          android:title="@string/action_delete_user"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_logout"
          android:title="@string/action_logout"
          android:orderInCategory="100"
          app:showAsAction="never"/>

</menu>
