<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="name.pssst.app.activity.Push">

    <EditText
        android:id="@+id/receiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_receiver"/>

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textAutoCorrect"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:singleLine="false"
        android:gravity="start|top"
        android:hint="@string/hint_message"/>

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0" style="?android:textAppearanceSmall"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textStyle="bold"/>

</LinearLayout>
